# ForwardEulerHeat

./: CMakeLists.txt  README.md
scripts/: plotting.py
src/: main.c
